# claude-code-proxy

./: CHANGELOG.md  Cargo.toml  README.md  flake.nix  justfile  package.json  smoke-test.sh
.github/workflows/: nix.yml  release.yml
assets/dashboard/: app.js  index.html  styles.css
reference/typescript/src/: sse.ts
reference/typescript/src/anthropic/: schema.ts
reference/typescript/src/test/: server.test.ts
src/: anthropic_passthrough.rs  auth.rs  config.rs  dashboard.rs  lib.rs  logging.rs  main.rs  monitor.rs  paths.rs  probe.rs  provider.rs  registry.rs  routing.rs  scanner.rs  server.rs  server.test.ts  server.ts  traffic.rs  tui.rs
src/anthropic/: sse.rs
src/providers/codex/: client.rs  client.ts  count-tokens.ts  mod.rs  request_summary.rs  websocket.rs  websocket.ts
src/providers/codex/auth/: token-store.ts
src/providers/codex/translate/: accumulate.ts  model_allowlist.rs  reducer.test.ts  reducer.ts  request.rs  stream.test.ts  stream.ts
src/providers/cursor/: client.test.ts  client.ts  index.test.ts  index.ts  mod.rs  sse-framing.ts  tool-bridge.ts
src/providers/cursor/translate/: request.test.ts  request.ts
src/providers/grok/: client.rs
src/providers/kimi/: count-tokens.ts  mod.rs
src/providers/kimi/translate/: accumulate.ts
src/providers/shared/: anthropic-sse.ts  count-tokens.ts
src/providers/shared/auth/: manager.ts  token-store.ts
src/providers/translate/: accumulate.ts
src/test/: server.ts
tests/: cli.rs  cursor_native.rs  foundation.rs  server.rs  smoke_cutover.rs
(+11 files in other folders)
