[package]
name = "claude-code-proxy"
version = "0.0.22"
description = "Anthropic-compatible proxy for Claude Code provider backends"
edition = "2024"
authors = ["Claude Code Proxy contributors"]
license = "MIT"

[dependencies]
clap = { version = "4.5", features = ["derive", "env"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "2.0"
axum = { version = "0.8", features = ["macros"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net", "signal", "time", "fs"] }
tower = { version = "0.5", features = ["util"] }
http = "1"
http-body-util = "0.1"
bytes = "1"
futures-core = "0.3"
futures-util = "0.3"
async-trait = "0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
uuid = { version = "1", features = ["v4", "serde"] }
time = { version = "0.3", features = ["formatting"] }

[dev-dependencies]
tempfile = "3.14"
assert_cmd = "2"
predicates = "3"
